--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-cmn-Hans-CN">
 <head>
   <title>React Redux Starter Kit</title>
   <meta charset="utf-8">
