--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,8 @@
   <title>1stg</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
-  <div id="root" style="height: 100%"></div>
+  <div id="root"></div>
 </body>
 </html>
