使用 CDN 版 bootstrap, 并删除 core.scss 中重复引入的Normalize.css

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
   <title>1stg</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <link href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="font-hei">
   <div id="root"></div>
